src/objects/Solution.object
<CustomObject>
    <businessProcesses>
        <fullName>Latin America</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Reviewed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>North America</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Reviewed</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Solution_Image__c</fullName>
        <inlineHelpText>Image related to the Solution</inlineHelpText>
        <label>Solution Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solution_Video__c</fullName>
        <inlineHelpText>Video that is related to the Solution - paste the hyperlink</inlineHelpText>
        <label>Solution Video</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TRC_Solution_Type__c</fullName>
        <inlineHelpText>The TRC Solution Type helps identify which TRC product group it is applicable.</inlineHelpText>
        <label>TRC Solution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AAH</fullName>
                </value>
                <value>
                    <fullName>ATS</fullName>
                </value>
                <value>
                    <fullName>Chillers</fullName>
                </value>
                <value>
                    <fullName>Controls</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllReviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Reviewed Solutions</label>
    </listViews>
    <listViews>
        <fullName>AllUnreviewedSolutions</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TRC_Solution_Type__c</columns>
        <columns>SOLUTION.CREATED_DATE</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <columns>SOLUTION.TIMES_USED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Unreviewed Solutions</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Latin_America</fullName>
        <active>false</active>
        <businessProcess>Latin America</businessProcess>
        <label>Latin America</label>
    </recordTypes>
    <recordTypes>
        <fullName>North_America</fullName>
        <active>true</active>
        <businessProcess>North America</businessProcess>
        <label>North America</label>
    </recordTypes>
    <recordTypes>
        <fullName>North_America_TRC_Solution_Record_Type</fullName>
        <active>true</active>
        <businessProcess>North America</businessProcess>
        <description>Used by the TRC (AAH, ATS, Chillers &amp; Controls)</description>
        <label>North America TRC - Solution Record Type</label>
    </recordTypes>
</CustomObject>